[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pathlib2>=2.3.7.post1",
    "scikit-learn>=1.7.1",
    "werkzeug>=3.1.3",
]
